--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 	</section>
 	
 <footer>🎼🎹🎤🎸kevincachacamarca@gmail.com🎼🎹🎤🎸+591-77259994🎼🎹🎤🎸
+<a	href="https://wa.me/qr/JELDLY3HU7WQJ1"><img src="img/whatsapp.jpg" width="40" height="40"></a>
+<a href="https://www.facebook.com/profile.php?id=100095241785336"><img src="img/facebook.png" width="40" height="40"></a>
+<a href="https://www.tiktok.com/@ale_music789?_t=8rQER64zwrY&_r=1"><img src="img/tiktok.jpg"width="40" height="40">	</a>
 
 </footer>
 </body>
