--- a/contrato.html
+++ b/contrato.html
@@ -38,6 +38,7 @@
 			</ul>
 		</nav>
 	</header>
+	<form action="https://formsubmit.co/kevincachacamarca@gmail.com" method="POST">
 <footer id="contrato">
 	<h1>boleta del contrato</h1>
 	<p>la amplificacion Ale Music ameniza:Matrimonios,Bautizos,Cumpleaños,Aniversarios,15 años Graduaciones,Fiestas en general.</p>
@@ -126,8 +127,12 @@
 <input type="submit" name="enviar">
 <input type="reset" name="borrar" value="borrar">
 </footer>
+</form>
 <footer>🎼🎹🎤🎸kevincachacamarca@gmail.com🎼🎹🎤🎸+591-77259994🎼🎹🎤🎸
-	
+<a	href="https://wa.me/qr/JELDLY3HU7WQJ1"><img src="img/whatsapp.jpg" width="40" height="40"></a>
+<a href="https://www.facebook.com/profile.php?id=100095241785336"><img src="img/facebook.png" width="40" height="40"></a>
+<a href="https://www.tiktok.com/@ale_music789?_t=8rQER64zwrY&_r=1"><img src="img/tiktok.jpg"width="40" height="40">	</a>
+
 </footer>
 </body>
 </html>
